--- a/VisualStudio/ndn-ind/ndn-ind.vcxproj.filters
+++ b/VisualStudio/ndn-ind/ndn-ind.vcxproj.filters
@@ -130,6 +130,12 @@
     <Filter Include="Source Files\src\util\regex">
       <UniqueIdentifier>{c1e558a0-a60f-4ad8-9e5e-255520134fd3}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\tools">
+      <UniqueIdentifier>{3c69295c-b92e-463a-9181-bf771e7e3e13}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\tools\micro-forwarder">
+      <UniqueIdentifier>{ac6865cd-602c-4efb-8680-7d69681d3bb4}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="framework.h">
@@ -1027,6 +1033,15 @@
     </ClCompile>
     <ClCompile Include="..\..\src\lite\signature-lite.cpp">
       <Filter>Source Files\src\lite</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\tools\micro-forwarder\micro-forwarder.cpp">
+      <Filter>Source Files\tools\micro-forwarder</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\tools\micro-forwarder\micro-forwarder-transport.cpp">
+      <Filter>Source Files\tools\micro-forwarder</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\lite\encoding\element-reader-lite.cpp">
+      <Filter>Source Files\src\lite\encoding</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
