--- a/Makefile.in
+++ b/Makefile.in
@@ -363,6 +363,7 @@ am_libndn_ind_la_OBJECTS = $(am__objects_2) $(am__objects_1) \
 	src/security/certificate/certificate.lo \
 	src/security/certificate/public-key.lo \
 	src/security/certificate/x509-certificate-info.lo \
+	src/security/certificate/x509-crl-info.lo \
 	src/security/pib/pib-certificate-container.lo \
 	src/security/pib/pib-identity.lo \
 	src/security/pib/pib-identity-container.lo \
@@ -943,6 +944,7 @@ am__depfiles_remade = contrib/apache/$(DEPDIR)/apr_base64.Plo \
 	src/security/certificate/$(DEPDIR)/certificate.Plo \
 	src/security/certificate/$(DEPDIR)/public-key.Plo \
 	src/security/certificate/$(DEPDIR)/x509-certificate-info.Plo \
+	src/security/certificate/$(DEPDIR)/x509-crl-info.Plo \
 	src/security/pib/$(DEPDIR)/pib-certificate-container.Plo \
 	src/security/pib/$(DEPDIR)/pib-identity-container.Plo \
 	src/security/pib/$(DEPDIR)/pib-identity.Plo \
@@ -1838,6 +1840,7 @@ ndn_ind_cpp_headers = \
   include/ndn-ind/security/certificate/certificate.hpp \
   include/ndn-ind/security/certificate/public-key.hpp \
   include/ndn-ind/security/certificate/x509-certificate-info.hpp \
+  include/ndn-ind/security/certificate/x509-crl-info.hpp \
   include/ndn-ind/security/pib/pib-certificate-container.hpp \
   include/ndn-ind/security/pib/pib-identity.hpp \
   include/ndn-ind/security/pib/pib-identity-container.hpp \
@@ -2072,6 +2075,7 @@ libndn_ind_la_SOURCES = ${libndn_c_la_SOURCES} ${ndn_ind_cpp_headers} \
   src/security/certificate/certificate.cpp \
   src/security/certificate/public-key.cpp \
   src/security/certificate/x509-certificate-info.cpp \
+  src/security/certificate/x509-crl-info.cpp \
   src/security/pib/pib-certificate-container.cpp \
   src/security/pib/pib-identity.cpp \
   src/security/pib/pib-identity-container.cpp \
@@ -2955,6 +2959,9 @@ src/security/certificate/public-key.lo:  \
 	src/security/certificate/$(am__dirstamp) \
 	src/security/certificate/$(DEPDIR)/$(am__dirstamp)
 src/security/certificate/x509-certificate-info.lo:  \
+	src/security/certificate/$(am__dirstamp) \
+	src/security/certificate/$(DEPDIR)/$(am__dirstamp)
+src/security/certificate/x509-crl-info.lo:  \
 	src/security/certificate/$(am__dirstamp) \
 	src/security/certificate/$(DEPDIR)/$(am__dirstamp)
 src/security/pib/$(am__dirstamp):
@@ -4064,6 +4071,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@src/security/certificate/$(DEPDIR)/certificate.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@src/security/certificate/$(DEPDIR)/public-key.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@src/security/certificate/$(DEPDIR)/x509-certificate-info.Plo@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@src/security/certificate/$(DEPDIR)/x509-crl-info.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@src/security/pib/$(DEPDIR)/pib-certificate-container.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@src/security/pib/$(DEPDIR)/pib-identity-container.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@src/security/pib/$(DEPDIR)/pib-identity.Plo@am__quote@ # am--include-marker
@@ -6495,6 +6503,7 @@ distclean: distclean-recursive
 	-rm -f src/security/certificate/$(DEPDIR)/certificate.Plo
 	-rm -f src/security/certificate/$(DEPDIR)/public-key.Plo
 	-rm -f src/security/certificate/$(DEPDIR)/x509-certificate-info.Plo
+	-rm -f src/security/certificate/$(DEPDIR)/x509-crl-info.Plo
 	-rm -f src/security/pib/$(DEPDIR)/pib-certificate-container.Plo
 	-rm -f src/security/pib/$(DEPDIR)/pib-identity-container.Plo
 	-rm -f src/security/pib/$(DEPDIR)/pib-identity.Plo
@@ -6877,6 +6886,7 @@ maintainer-clean: maintainer-clean-recursive
 	-rm -f src/security/certificate/$(DEPDIR)/certificate.Plo
 	-rm -f src/security/certificate/$(DEPDIR)/public-key.Plo
 	-rm -f src/security/certificate/$(DEPDIR)/x509-certificate-info.Plo
+	-rm -f src/security/certificate/$(DEPDIR)/x509-crl-info.Plo
 	-rm -f src/security/pib/$(DEPDIR)/pib-certificate-container.Plo
 	-rm -f src/security/pib/$(DEPDIR)/pib-identity-container.Plo
 	-rm -f src/security/pib/$(DEPDIR)/pib-identity.Plo
